Отказ от h2 в пользу ConcurrentHashMap